--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CursedCore Hidden</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
@@ -20,18 +21,18 @@
 
     .container {
       text-align: center;
-      padding-top: 80px;
+      padding: 60px 20px 40px;
     }
 
     h1 {
-      font-size: 3.5rem;
+      font-size: 7vw;
       color: #ff1a1a;
       text-shadow: 0 0 20px #ff1a1a, 0 0 40px #ff1a1a;
     }
 
     p {
       margin-top: 15px;
-      font-size: 1.2rem;
+      font-size: 1rem;
       color: white;
     }
 
@@ -45,21 +46,23 @@
     }
 
     footer {
-      position: absolute;
+      position: relative;
       bottom: 10px;
       width: 100%;
       text-align: center;
       color: #999;
       font-size: 0.9rem;
+      padding: 20px 0;
     }
 
     .control-panel {
       background: #1b1b1d;
       border: 2px solid #ff1a1a;
       border-radius: 15px;
-      padding: 30px 20px;
-      margin: 50px auto;
-      max-width: 350px;
+      padding: 25px 15px;
+      margin: 40px auto;
+      width: 100%;
+      max-width: 400px;
       text-align: center;
       box-shadow: 0 0 15px #ff1a1a;
       position: relative;
@@ -69,18 +72,21 @@
     .control-panel h2 {
       color: #ff4040;
       margin-bottom: 20px;
+      font-size: 1.5rem;
     }
 
     .control-panel button {
       background: #ff4d4d;
       border: none;
       border-radius: 8px;
-      padding: 10px 20px;
-      margin: 10px 5px;
+      padding: 10px 18px;
+      margin: 8px 5px;
       color: white;
       font-size: 1rem;
       cursor: pointer;
       transition: all 0.2s ease-in-out;
+      width: 40%;
+      max-width: 150px;
     }
 
     .control-panel button:hover {
@@ -110,6 +116,7 @@
       overflow-y: auto;
       text-align: left;
       white-space: pre-line;
+      font-size: 0.85rem;
     }
 
     .bg-lines::before {
@@ -128,12 +135,8 @@
     }
 
     @keyframes rotate {
-      from {
-        transform: rotate(0deg);
-      }
-      to {
-        transform: rotate(360deg);
-      }
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
     }
 
     .particle-container {
@@ -168,6 +171,25 @@
         opacity: 0;
       }
     }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 8vw;
+      }
+
+      .control-panel {
+        padding: 20px 10px;
+      }
+
+      .control-panel button {
+        width: 100%;
+        margin: 8px 0;
+      }
+
+      .log-box {
+        font-size: 0.75rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -176,8 +198,9 @@
 
 <div class="container">
   <h1>CursedCore Hidden Internal</h1>
-  <p>Developer: DecentinHell & SidboyInHell  </p>
+  <p>Developer: DecentinHell & SidboyInHell</p>
   <p>The Best Aimbot Ever Made Buy Now - <a href="https://discord.gg/qtgETFpy" target="_blank">Click here</a></p>
+
   <div class="control-panel">
     <h2>Aimbot Section</h2>
 
