--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CursedCore Hidden</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
@@ -21,17 +20,18 @@
 
     .container {
       text-align: center;
-      padding: 60px 20px 40px;
+      padding-top: 60px;
+      padding-bottom: 80px;
     }
 
     h1 {
-      font-size: 7vw;
+      font-size: 2.8rem;
       color: #ff1a1a;
-      text-shadow: 0 0 20px #ff1a1a, 0 0 40px #ff1a1a;
+      text-shadow: 0 0 15px #ff1a1a, 0 0 30px #ff1a1a;
     }
 
     p {
-      margin-top: 15px;
+      margin-top: 10px;
       font-size: 1rem;
       color: white;
     }
@@ -47,46 +47,55 @@
 
     footer {
       position: relative;
-      bottom: 10px;
+      bottom: 0;
       width: 100%;
       text-align: center;
       color: #999;
       font-size: 0.9rem;
-      padding: 20px 0;
+      margin-top: 20px;
     }
 
     .control-panel {
       background: #1b1b1d;
       border: 2px solid #ff1a1a;
       border-radius: 15px;
-      padding: 25px 15px;
+      padding: 20px 15px;
       margin: 40px auto;
-      width: 100%;
-      max-width: 400px;
+      max-width: 600px;
       text-align: center;
-      box-shadow: 0 0 15px #ff1a1a;
+      box-shadow: 0 0 12px #ff1a1a;
       position: relative;
       z-index: 2;
     }
 
     .control-panel h2 {
       color: #ff4040;
-      margin-bottom: 20px;
-      font-size: 1.5rem;
+      margin-bottom: 15px;
+      font-size: 1.3rem;
+    }
+
+    .button-group {
+      display: flex;
+      justify-content: center;
+      gap: 8px;
+      flex-wrap: wrap;
+      margin: 8px 0 18px;
+    }
+
+    .button-group button {
+      flex: 1 1 40%;
+      max-width: 120px;
     }
 
     .control-panel button {
       background: #ff4d4d;
       border: none;
-      border-radius: 8px;
-      padding: 10px 18px;
-      margin: 8px 5px;
+      border-radius: 6px;
+      padding: 8px 14px;
       color: white;
-      font-size: 1rem;
+      font-size: 0.9rem;
       cursor: pointer;
       transition: all 0.2s ease-in-out;
-      width: 40%;
-      max-width: 150px;
     }
 
     .control-panel button:hover {
@@ -95,53 +104,34 @@
 
     .active-on {
       background-color: #00ff5a !important;
-      box-shadow: 0 0 15px #00ff5a;
+      box-shadow: 0 0 10px #00ff5a;
     }
 
     .active-off {
       background-color: #ff1a1a !important;
-      box-shadow: 0 0 15px #ff1a1a;
+      box-shadow: 0 0 10px #ff1a1a;
     }
 
     .log-box {
-      margin-top: 20px;
+      margin-top: 15px;
       width: 100%;
-      min-height: 100px;
-      max-height: 150px;
+      min-height: 80px;
+      max-height: 140px;
       background: black;
       border: 2px solid #ff4d4d;
       color: white;
       font-family: monospace;
-      padding: 10px;
+      padding: 8px;
       overflow-y: auto;
       text-align: left;
       white-space: pre-line;
       font-size: 0.85rem;
     }
 
-    .bg-lines::before {
-      content: '';
-      position: absolute;
-      width: 150%;
-      height: 150%;
-      background: repeating-linear-gradient(
-        45deg,
-        rgba(255, 26, 26, 0.05),
-        rgba(255, 26, 26, 0.05) 1px,
-        transparent 1px,
-        transparent 20px
-      );
-      animation: rotate 60s linear infinite;
-    }
-
-    @keyframes rotate {
-      from { transform: rotate(0deg); }
-      to { transform: rotate(360deg); }
-    }
-
     .particle-container {
       position: absolute;
-      top: 0; left: 0;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       overflow: hidden;
@@ -150,8 +140,8 @@
 
     .particle {
       position: absolute;
-      width: 4px;
-      height: 4px;
+      width: 3px;
+      height: 3px;
       background: #ff1a1a;
       border-radius: 50%;
       animation: floatUp 10s infinite linear;
@@ -172,22 +162,27 @@
       }
     }
 
-    @media (max-width: 480px) {
+    @media (max-width: 768px) {
       h1 {
-        font-size: 8vw;
+        font-size: 2rem;
       }
 
       .control-panel {
-        padding: 20px 10px;
+        max-width: 90%;
+        padding: 15px 10px;
+      }
+
+      .button-group {
+        gap: 6px;
       }
 
       .control-panel button {
-        width: 100%;
-        margin: 8px 0;
+        font-size: 0.85rem;
+        padding: 6px 12px;
       }
 
       .log-box {
-        font-size: 0.75rem;
+        font-size: 0.8rem;
       }
     }
   </style>
@@ -206,25 +201,33 @@
 
     <div>
       <p>Hook ADB Server</p>
-      <button onclick="toggleState(this, 'Hooked ADB')">Hook ADB</button>
+      <div class="button-group">
+        <button onclick="toggleState(this, 'Hooked ADB')">Hook ADB</button>
+      </div>
     </div>
 
     <div>
       <p>Aimbot State</p>
-      <button onclick="toggleState(this, 'Aimbot ON')">ON</button>
-      <button onclick="toggleState(this, 'Aimbot OFF')">OFF</button>
+      <div class="button-group">
+        <button onclick="toggleState(this, 'Aimbot ON')">ON</button>
+        <button onclick="toggleState(this, 'Aimbot OFF')">OFF</button>
+      </div>
     </div>
 
     <div>
       <p>ESP Visual</p>
-      <button onclick="toggleState(this, 'ESP ON')">ON</button>
-      <button onclick="toggleState(this, 'ESP OFF')">OFF</button>
+      <div class="button-group">
+        <button onclick="toggleState(this, 'ESP ON')">ON</button>
+        <button onclick="toggleState(this, 'ESP OFF')">OFF</button>
+      </div>
     </div>
 
     <div>
       <p>Sniper Scope</p>
-      <button onclick="toggleState(this, 'Sniper Scope ON')">ON</button>
-      <button onclick="toggleState(this, 'Sniper Scope OFF')">OFF</button>
+      <div class="button-group">
+        <button onclick="toggleState(this, 'Sniper Scope ON')">ON</button>
+        <button onclick="toggleState(this, 'Sniper Scope OFF')">OFF</button>
+      </div>
     </div>
 
     <div class="log-box" id="log-box"></div>
@@ -270,10 +273,8 @@
     logBox.textContent = `• ${getTimeStamp()} Welcome to the cheats`;
   }
 
-  // Initialize with welcome log
   clearLog();
 
-  // Generate particles
   const particleContainer = document.getElementById('particles');
   for (let i = 0; i < 50; i++) {
     const particle = document.createElement('div');
