--- a/index.html
+++ b/index.html
@@ -11,28 +11,34 @@
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
+      height: 100%;
       background: #0b0b0d;
       color: white;
       font-family: 'Orbitron', sans-serif;
-      overflow-x: hidden;
+      overflow: hidden;
     }
 
     .container {
-      text-align: center;
-      padding-top: 60px;
-      padding-bottom: 80px;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+      position: relative;
+      z-index: 2;
     }
 
     h1 {
-      font-size: 2.8rem;
+      font-size: 2.2rem;
       color: #ff1a1a;
-      text-shadow: 0 0 15px #ff1a1a, 0 0 30px #ff1a1a;
+      text-shadow: 0 0 10px #ff1a1a;
+      margin-bottom: 5px;
     }
 
     p {
-      margin-top: 10px;
-      font-size: 1rem;
+      font-size: 0.95rem;
       color: white;
     }
 
@@ -46,56 +52,47 @@
     }
 
     footer {
-      position: relative;
-      bottom: 0;
+      position: absolute;
+      bottom: 5px;
       width: 100%;
       text-align: center;
       color: #999;
-      font-size: 0.9rem;
-      margin-top: 20px;
+      font-size: 0.75rem;
     }
 
     .control-panel {
       background: #1b1b1d;
       border: 2px solid #ff1a1a;
-      border-radius: 15px;
-      padding: 20px 15px;
-      margin: 40px auto;
-      max-width: 600px;
+      border-radius: 12px;
+      padding: 15px 10px;
+      margin-top: 10px;
+      width: 100%;
+      max-width: 320px;
       text-align: center;
-      box-shadow: 0 0 12px #ff1a1a;
-      position: relative;
-      z-index: 2;
+      box-shadow: 0 0 10px #ff1a1a;
     }
 
     .control-panel h2 {
       color: #ff4040;
-      margin-bottom: 15px;
-      font-size: 1.3rem;
+      margin-bottom: 10px;
+      font-size: 1.2rem;
     }
 
-    .button-group {
-      display: flex;
-      justify-content: center;
-      gap: 8px;
-      flex-wrap: wrap;
-      margin: 8px 0 18px;
-    }
-
-    .button-group button {
-      flex: 1 1 40%;
-      max-width: 120px;
+    .control-panel p {
+      margin: 5px 0;
+      font-size: 0.9rem;
     }
 
     .control-panel button {
       background: #ff4d4d;
       border: none;
       border-radius: 6px;
-      padding: 8px 14px;
+      padding: 6px 12px;
+      margin: 5px 4px;
       color: white;
       font-size: 0.9rem;
       cursor: pointer;
-      transition: all 0.2s ease-in-out;
+      transition: 0.2s;
     }
 
     .control-panel button:hover {
@@ -113,25 +110,24 @@
     }
 
     .log-box {
-      margin-top: 15px;
+      margin-top: 10px;
       width: 100%;
       min-height: 80px;
-      max-height: 140px;
+      max-height: 100px;
       background: black;
       border: 2px solid #ff4d4d;
       color: white;
       font-family: monospace;
-      padding: 8px;
+      font-size: 0.8rem;
+      padding: 6px;
       overflow-y: auto;
       text-align: left;
       white-space: pre-line;
-      font-size: 0.85rem;
     }
 
     .particle-container {
       position: absolute;
-      top: 0;
-      left: 0;
+      top: 0; left: 0;
       width: 100%;
       height: 100%;
       overflow: hidden;
@@ -145,45 +141,27 @@
       background: #ff1a1a;
       border-radius: 50%;
       animation: floatUp 10s infinite linear;
-      opacity: 0.4;
+      opacity: 0.3;
     }
 
     @keyframes floatUp {
       0% {
-        transform: translateY(100vh) translateX(0);
+        transform: translateY(100vh);
         opacity: 0;
       }
       50% {
-        opacity: 0.5;
+        opacity: 0.4;
       }
       100% {
-        transform: translateY(-10vh) translateX(20px);
+        transform: translateY(-10vh);
         opacity: 0;
       }
     }
 
-    @media (max-width: 768px) {
-      h1 {
-        font-size: 2rem;
-      }
-
-      .control-panel {
-        max-width: 90%;
-        padding: 15px 10px;
-      }
-
-      .button-group {
-        gap: 6px;
-      }
-
-      .control-panel button {
-        font-size: 0.85rem;
-        padding: 6px 12px;
-      }
-
-      .log-box {
-        font-size: 0.8rem;
-      }
+    @media (max-width: 400px) {
+      h1 { font-size: 1.8rem; }
+      .control-panel h2 { font-size: 1rem; }
+      .control-panel p { font-size: 0.8rem; }
     }
   </style>
 </head>
@@ -194,40 +172,32 @@
 <div class="container">
   <h1>CursedCore Hidden Internal</h1>
   <p>Developer: DecentinHell & SidboyInHell</p>
-  <p>The Best Aimbot Ever Made Buy Now - <a href="https://discord.gg/qtgETFpy" target="_blank">Click here</a></p>
+  <p>The Best Aimbot Ever Made - <a href="https://discord.gg/qtgETFpy" target="_blank">Buy Now</a></p>
 
   <div class="control-panel">
     <h2>Aimbot Section</h2>
 
     <div>
       <p>Hook ADB Server</p>
-      <div class="button-group">
-        <button onclick="toggleState(this, 'Hooked ADB')">Hook ADB</button>
-      </div>
+      <button onclick="toggleState(this, 'Hooked ADB')">Hook ADB</button>
     </div>
 
     <div>
       <p>Aimbot State</p>
-      <div class="button-group">
-        <button onclick="toggleState(this, 'Aimbot ON')">ON</button>
-        <button onclick="toggleState(this, 'Aimbot OFF')">OFF</button>
-      </div>
+      <button onclick="toggleState(this, 'Aimbot ON')">ON</button>
+      <button onclick="toggleState(this, 'Aimbot OFF')">OFF</button>
     </div>
 
     <div>
       <p>ESP Visual</p>
-      <div class="button-group">
-        <button onclick="toggleState(this, 'ESP ON')">ON</button>
-        <button onclick="toggleState(this, 'ESP OFF')">OFF</button>
-      </div>
+      <button onclick="toggleState(this, 'ESP ON')">ON</button>
+      <button onclick="toggleState(this, 'ESP OFF')">OFF</button>
     </div>
 
     <div>
       <p>Sniper Scope</p>
-      <div class="button-group">
-        <button onclick="toggleState(this, 'Sniper Scope ON')">ON</button>
-        <button onclick="toggleState(this, 'Sniper Scope OFF')">OFF</button>
-      </div>
+      <button onclick="toggleState(this, 'Sniper Scope ON')">ON</button>
+      <button onclick="toggleState(this, 'Sniper Scope OFF')">OFF</button>
     </div>
 
     <div class="log-box" id="log-box"></div>
@@ -235,17 +205,14 @@
   </div>
 </div>
 
-<footer>
-  © 2025 CursedCore – All Rights Reserved
-</footer>
+<footer>© 2025 CursedCore – All Rights Reserved</footer>
 
 <script>
   const logBox = document.getElementById("log-box");
 
   function getTimeStamp() {
     const now = new Date();
-    return `[${now.getHours().toString().padStart(2, '0')}:${now.getMinutes()
-      .toString().padStart(2, '0')}:${now.getSeconds().toString().padStart(2, '0')}]`;
+    return `[${now.getHours().toString().padStart(2, '0')}:${now.getMinutes().toString().padStart(2, '0')}:${now.getSeconds().toString().padStart(2, '0')}]`;
   }
 
   function toggleState(button, message) {
@@ -276,7 +243,7 @@
   clearLog();
 
   const particleContainer = document.getElementById('particles');
-  for (let i = 0; i < 50; i++) {
+  for (let i = 0; i < 40; i++) {
     const particle = document.createElement('div');
     particle.className = 'particle';
     particle.style.left = Math.random() * 100 + 'vw';
