--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CursedCore Hidden</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
     * {
@@ -16,34 +17,37 @@
       background: #0b0b0d;
       color: white;
       font-family: 'Orbitron', sans-serif;
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
     .container {
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 20px;
+      padding: 20px 15px;
+      text-align: center;
       position: relative;
       z-index: 2;
     }
 
     h1 {
-      font-size: 2.2rem;
+      font-size: 2.4rem;
       color: #ff1a1a;
       text-shadow: 0 0 10px #ff1a1a;
-      margin-bottom: 5px;
+      margin-bottom: 10px;
     }
 
     p {
-      font-size: 0.95rem;
+      font-size: 1rem;
       color: white;
+      margin-bottom: 5px;
+      word-break: break-word;
     }
 
     a {
-      color: #ff1a1a;
+      color: #ff4d4d;
       text-decoration: none;
     }
 
@@ -52,9 +56,7 @@
     }
 
     footer {
-      position: absolute;
-      bottom: 5px;
-      width: 100%;
+      margin-top: 20px;
       text-align: center;
       color: #999;
       font-size: 0.75rem;
@@ -64,35 +66,34 @@
       background: #1b1b1d;
       border: 2px solid #ff1a1a;
       border-radius: 12px;
-      padding: 15px 10px;
-      margin-top: 10px;
+      padding: 15px;
+      margin-top: 20px;
       width: 100%;
-      max-width: 320px;
-      text-align: center;
+      max-width: 360px;
       box-shadow: 0 0 10px #ff1a1a;
     }
 
     .control-panel h2 {
       color: #ff4040;
-      margin-bottom: 10px;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
+      margin-bottom: 12px;
     }
 
     .control-panel p {
-      margin: 5px 0;
-      font-size: 0.9rem;
+      margin: 6px 0;
+      font-size: 0.95rem;
     }
 
     .control-panel button {
       background: #ff4d4d;
       border: none;
       border-radius: 6px;
-      padding: 6px 12px;
-      margin: 5px 4px;
+      padding: 8px 14px;
+      margin: 4px 5px;
       color: white;
       font-size: 0.9rem;
       cursor: pointer;
-      transition: 0.2s;
+      transition: 0.2s ease;
     }
 
     .control-panel button:hover {
@@ -113,13 +114,13 @@
       margin-top: 10px;
       width: 100%;
       min-height: 80px;
-      max-height: 100px;
+      max-height: 120px;
       background: black;
       border: 2px solid #ff4d4d;
       color: white;
       font-family: monospace;
-      font-size: 0.8rem;
-      padding: 6px;
+      font-size: 0.85rem;
+      padding: 8px;
       overflow-y: auto;
       text-align: left;
       white-space: pre-line;
@@ -158,10 +159,23 @@
       }
     }
 
-    @media (max-width: 400px) {
-      h1 { font-size: 1.8rem; }
-      .control-panel h2 { font-size: 1rem; }
-      .control-panel p { font-size: 0.8rem; }
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.8rem;
+      }
+
+      .control-panel h2 {
+        font-size: 1.1rem;
+      }
+
+      .control-panel button {
+        font-size: 0.85rem;
+        padding: 6px 10px;
+      }
+
+      .log-box {
+        font-size: 0.75rem;
+      }
     }
   </style>
 </head>
@@ -203,9 +217,9 @@
     <div class="log-box" id="log-box"></div>
     <button onclick="clearLog()">Clear Log</button>
   </div>
-</div>
 
-<footer>© 2025 CursedCore – All Rights Reserved</footer>
+  <footer>© 2025 CursedCore – All Rights Reserved</footer>
+</div>
 
 <script>
   const logBox = document.getElementById("log-box");
@@ -243,7 +257,8 @@
   clearLog();
 
   const particleContainer = document.getElementById('particles');
-  for (let i = 0; i < 40; i++) {
+  const particleCount = window.innerWidth < 500 ? 20 : 40;
+  for (let i = 0; i < particleCount; i++) {
     const particle = document.createElement('div');
     particle.className = 'particle';
     particle.style.left = Math.random() * 100 + 'vw';
