--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>CursedCore Hidden</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
     * {
@@ -17,37 +16,36 @@
       background: #0b0b0d;
       color: white;
       font-family: 'Orbitron', sans-serif;
-      overflow-x: hidden;
+      overflow: hidden;
     }
 
     .container {
-      min-height: 100vh;
+      height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 20px 15px;
-      text-align: center;
+      padding: 20px;
       position: relative;
       z-index: 2;
     }
 
     h1 {
-      font-size: 2.4rem;
+      font-size: 2.2rem;
       color: #ff1a1a;
       text-shadow: 0 0 10px #ff1a1a;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
+      text-align: center;
     }
 
     p {
-      font-size: 1rem;
+      font-size: 0.95rem;
       color: white;
-      margin-bottom: 5px;
-      word-break: break-word;
+      text-align: center;
     }
 
     a {
-      color: #ff4d4d;
+      color: #ff1a1a;
       text-decoration: none;
     }
 
@@ -56,7 +54,9 @@
     }
 
     footer {
-      margin-top: 20px;
+      position: absolute;
+      bottom: 5px;
+      width: 100%;
       text-align: center;
       color: #999;
       font-size: 0.75rem;
@@ -66,34 +66,40 @@
       background: #1b1b1d;
       border: 2px solid #ff1a1a;
       border-radius: 12px;
-      padding: 15px;
-      margin-top: 20px;
+      padding: 15px 10px;
+      margin-top: 10px;
       width: 100%;
-      max-width: 360px;
+      max-width: 340px;
+      text-align: center;
       box-shadow: 0 0 10px #ff1a1a;
     }
 
     .control-panel h2 {
       color: #ff4040;
-      font-size: 1.3rem;
-      margin-bottom: 12px;
+      margin-bottom: 10px;
+      font-size: 1.2rem;
     }
 
     .control-panel p {
       margin: 6px 0;
-      font-size: 0.95rem;
+      font-size: 0.9rem;
+    }
+
+    .control-panel div {
+      margin-bottom: 10px;
     }
 
     .control-panel button {
       background: #ff4d4d;
       border: none;
       border-radius: 6px;
-      padding: 8px 14px;
-      margin: 4px 5px;
+      padding: 8px 12px;
+      margin: 6px 4px;
       color: white;
       font-size: 0.9rem;
       cursor: pointer;
-      transition: 0.2s ease;
+      transition: 0.2s;
+      min-width: 100px;
     }
 
     .control-panel button:hover {
@@ -114,13 +120,13 @@
       margin-top: 10px;
       width: 100%;
       min-height: 80px;
-      max-height: 120px;
+      max-height: 100px;
       background: black;
       border: 2px solid #ff4d4d;
       color: white;
       font-family: monospace;
-      font-size: 0.85rem;
-      padding: 8px;
+      font-size: 0.8rem;
+      padding: 6px;
       overflow-y: auto;
       text-align: left;
       white-space: pre-line;
@@ -159,22 +165,21 @@
       }
     }
 
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 1.8rem;
-      }
+    @media (max-width: 500px) {
+      h1 { font-size: 1.8rem; }
+      .control-panel h2 { font-size: 1rem; }
+      .control-panel p { font-size: 0.8rem; }
 
-      .control-panel h2 {
-        font-size: 1.1rem;
+      .control-panel div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 6px;
       }
 
       .control-panel button {
-        font-size: 0.85rem;
-        padding: 6px 10px;
-      }
-
-      .log-box {
-        font-size: 0.75rem;
+        width: 100%;
+        max-width: 240px;
       }
     }
   </style>
@@ -217,9 +222,9 @@
     <div class="log-box" id="log-box"></div>
     <button onclick="clearLog()">Clear Log</button>
   </div>
-
-  <footer>© 2025 CursedCore – All Rights Reserved</footer>
 </div>
+
+<footer>© 2025 CursedCore – All Rights Reserved</footer>
 
 <script>
   const logBox = document.getElementById("log-box");
@@ -257,8 +262,7 @@
   clearLog();
 
   const particleContainer = document.getElementById('particles');
-  const particleCount = window.innerWidth < 500 ? 20 : 40;
-  for (let i = 0; i < particleCount; i++) {
+  for (let i = 0; i < 40; i++) {
     const particle = document.createElement('div');
     particle.className = 'particle';
     particle.style.left = Math.random() * 100 + 'vw';
