--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       padding: 20px;
       position: relative;
       z-index: 2;
+      text-align: center;
     }
 
     h1 {
@@ -35,13 +36,12 @@
       color: #ff1a1a;
       text-shadow: 0 0 10px #ff1a1a;
       margin-bottom: 5px;
-      text-align: center;
     }
 
     p {
       font-size: 0.95rem;
       color: white;
-      text-align: center;
+      margin: 2px 0;
     }
 
     a {
@@ -60,6 +60,7 @@
       text-align: center;
       color: #999;
       font-size: 0.75rem;
+      z-index: 3;
     }
 
     .control-panel {
@@ -67,9 +68,9 @@
       border: 2px solid #ff1a1a;
       border-radius: 12px;
       padding: 15px 10px;
-      margin-top: 10px;
+      margin-top: 15px;
       width: 100%;
-      max-width: 340px;
+      max-width: 350px;
       text-align: center;
       box-shadow: 0 0 10px #ff1a1a;
     }
@@ -81,7 +82,7 @@
     }
 
     .control-panel p {
-      margin: 6px 0;
+      margin: 6px 0 3px;
       font-size: 0.9rem;
     }
 
@@ -93,13 +94,12 @@
       background: #ff4d4d;
       border: none;
       border-radius: 6px;
-      padding: 8px 12px;
-      margin: 6px 4px;
+      padding: 8px 16px;
+      margin: 4px;
       color: white;
       font-size: 0.9rem;
       cursor: pointer;
       transition: 0.2s;
-      min-width: 100px;
     }
 
     .control-panel button:hover {
@@ -179,7 +179,7 @@
 
       .control-panel button {
         width: 100%;
-        max-width: 240px;
+        max-width: 260px;
       }
     }
   </style>
