--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 <div class="container">
   <h1>CursedCore Hidden Internal</h1>
   <p>Developer: DecentinHell & SidboyInHell</p>
-  <p>The Best Aimbot Ever Made - <a href="https://discord.gg/qtgETFpy" target="_blank">Buy Now</a></p>
+  <p>The Best Aimbot Ever Made - <a href="https://discord.gg/jp4677TdV2" target="_blank">Join Discord Now...</a></p>
 
   <div class="control-panel">
     <h2>Aimbot Section</h2>
